http/css/main.css
/*
Copyright (C) 2019  Justus Croskery
To contact me, email me at justus@olmmcc.tk.

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see https://www.gnu.org/licenses/.
*/

/*Beginning of wrapper css (all files)*/
body {
    font-family: 'new baskerville', 'calibri', 'cambria', 'noto sans', 'sans';
    font-size: 27px;
    background: url('/images/Do\ you\ hear\ what\ I\ hear\ Justus.jpg') no-repeat center center fixed;
    background-size: cover;
    margin: 0;
    word-wrap: break-word;
}
#main-text, .mainForm {
    width: 70%;
    margin: auto;
    padding: 0 8%;
    background: rgba(255,255,255,0.7);
    border: 4px solid royalblue;
}
/*Beginning of forms*/
.mainForm {
    text-align: center;
}
input[type="text"], input[type='email'], input[type='password'] {
    margin-bottom: 8px;
    width: auto;
    font-size: 23px;
    padding: 5px;
}
select {
    margin: 0 5px;
}
/*End of forms*/
.bottom {
    width: 86%;
    margin: auto;
    padding: 10px 0;
    background-color: rgba(105, 207, 74, 0.9);
    text-align: center;
}
pre {
    white-space: pre-wrap;
}
.delete{
    background-color: red;
}
#myPage {
    margin-top: 55px;
}
/*Beginning of topnav*/
#topnav {
    overflow: hidden;
    position: fixed;
    font-family: 'gotham', 'calibri', 'cambria', 'noto sans', 'sans';
    width: 100%;
    top: 0;
    background-color: #333;
}
#topnav > #active, .dropdown label, #dropdownCheck{
    display: none;
}
#topnav a {
    text-decoration: none;
    text-align: center;
    padding: 11px;
}
#topnav a:hover {
    background-color: #ddd;
    color: black;
}
#topnav #active {
    background-color: #4CAF50;
}
#topnav a, #notificationP{
    color: white;
}
@media only screen and (max-width: 1199px) {
    .dropdownSvg {
        float: right;
        cursor: pointer;
        height: 2em;
        margin-right: 3px;
    }
    .dropdownSvg rect{
        fill: white;
    }
    .dropdown label{
        display: block;
    }
    #dropdownCheck:checked ~ .dropdown-content a{
        display: block !important;
    }
    #dropdownCheck:checked ~ .dropdown-content {
        border: 4px solid royalblue;
        background-color: #333;
        right: 0;
        top: 2em;
        width: 250px;
        position: fixed;
    }
    #topnav .dropdown-content a{
        color: white;
        padding: 3px 4px;
        text-decoration: none;
        display: none !important;
        float: none;
    }
    #topnav > #active {
        display: block;
        float: left;
    }
}
/*End of topnav*/
/*End of wrapper css (all files)*/

/*Beginning of tables (calendar and database)*/
caption, .calendar h1 {
    font-family: 'gotham', 'calibri', 'cambria', 'noto sans', 'sans';
    font-size: 56px;
    padding: 5px;
    margin: 0;
}
td, .calendar .bodyUl li {
    font-family: 'Noto Sans', sans-serif;
}
th, .calendar .headerUl li {
    font-family: 'Tahoma', 'Arial', 'Helvetica', sans-serif;
}
/*Beginning of calendar*/
.calendarEventTitle {
    font-size: 16px;
    margin: 0;
    padding: 0;
    color: darkcyan;
}
.calendar ul {
    list-style: none;
	padding: 0;
	margin: 0;
    width: 100%;
}
.calendar li {
    display: block;
    float: left;
    width: 14.285%;
    box-sizing: border-box;
    border: 1px solid #ccc;
	margin-right: -1px;
    margin-bottom: -1px;
    border: 1px solid blue;
}
.calendar .bodyUl li:hover {
	background-color: lightcyan;
}
.calendar .headerUl li {
    font-size: 18px;
    vertical-align: top;
    text-align: center;
}
.calendar .bodyUl li {
    font-size: 18px;
    vertical-align: top;
    height: 120px;
    padding: 4px;
}
.calendarEvent {
    margin: 0;
    padding: 0;
    font-size: 12px;
}
body.calendarClass {
    background-image: none;
    background-color: lightblue;
}
.calendar {
    margin: auto;
    width: 90%;
}
.selectedDate {
    color: green;
    border: 2px solid green !important;
}
/*Beginning of calendar popup (details)*/
#detailsDiv p {
    margin-left: 10px;
    margin-right: 10px;
}
#closeDetails {
    width: 40px;
    right: 0;
    top: 0;
    position: absolute; 
    cursor: pointer;
}
#detailsDiv {
    background-color: rgb(150,150,150);
    border: 4px solid royalblue;
    border-radius: 25px;
    position: relative;
}
.weekday {
    display: none;
}
/*End of calendar popup (details)*/
@media only screen and (max-width: 739px) {
    .calendar li {
		height: auto !important;
		width: 100%;
		padding: 10px;
		margin-bottom: -1px;
    }
    .unNeededDate, .calendar .headerUl li {
        display: none !important;
    }
    .weekday {
        display: initial;
        color: gray;
    }
}
/*End of calendar*/

/*Beginning of database*/
.database input, .database textarea {
    font-size: 12px;
    width: 100%;
    box-sizing: border-box;
    margin: 0;
}
.database textarea {
    height: 60px;
}
.database td, .database th {
    border: 1px solid blue;
}
.database {
    background-color: gray;
    border: 1px solid blue;
    border-collapse: collapse;
    margin: auto;
    width: 100%;
}
/*End of database*/

/*End of tables (calendar and database)*/

/*Beginning of notification*/
#notificationP {
    color: white;
    padding: 0 40px;
}
#notificationDiv {
    width: 60%;
    top: 0;
    left: 20%;
    right: 20%;
    background-color: rgba(0, 0, 0, 0.7);
    border-radius: 22px;
    text-align: center;
    position: fixed;
}
#closeNotification {
    margin-left: -40px;
    width: 40px;
    left: 80%;
    top: 0;
    position: fixed;
    cursor: pointer;
}
/*End of notification*/

/*Beginning of left/right button*/
.leftButton, .rightButton {
    top: 42.5%;
    background-color: transparent;
    border: none;
    position: fixed;
    padding: 0;
}
.leftButton {
    left: 1%;
}
.rightButton {
    right: 1%;
}
.leftButton svg, .rightButton svg {
    width: 3vw;
    height: 15%;
}
.buttonPolygon {
    fill: gray;
}
/*End of left/right button*/

/*Beginning of headers*/
h1, h2, h3, h4, h5, h6 {
    font-family: 'Arial', 'Helvetica', sans-serif;
}
h1 {
    font-size: 56px;
    text-align: center;
}
h2 {
    font-size: 40px;
    margin: 0;
}
h3 {
    color: darkcyan;
    font-size: 31px;
}
h4 {
    margin: 30px 0;
    font-size: 31px;
    text-align: center;
}
/*End of headers*/

/*Beginning of songs page*/
body.songsClass {
    background-image: url('/images/Do\ you\ hear\ what\ I\ hear\ Faith.jpg');
}
/*Beginning of songs popup*/
#closeVideo {
    margin-left: -40px;
    width: 40px;
    left: 90%;
    top: 10%;
    position: fixed;
    cursor: pointer;
}
.video {
    width: 80%;
    height: 80%;
    top: 10%;
    left: 10%;
    background-color: black;
    position: fixed;
}
/*End of songs popup*/
/*End of songs page*/

/*Beginning of generic popup*/
.whiteRect {
    fill: white;
}
#graydiv {
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    background-color: rgba(57, 59, 59, 0.9);
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
}
/*End of generic popup*/

/*Beginning of font size*/
select, button, input[type='submit'], .smallSpan {
    font-size: 20px;
}
/*End of font size*/

/*Beginning of generic style classes*/
.leftFloat {
    float: left;
}
.rightFloat {
    float: right;
}
.leftDiv {
    text-align: left;
}
.centerDiv {
    text-align: center;
}
.rightDiv {
    text-align: right;
}
.bold {
    font-weight: bold;
}
.inline {
    display: inline;
}
.blue {
    color: blue !important;
}
.hide {
    display: none;
}
/*End of generic style classes*/

/*Beginning of other backgrounds*/
body.homeClass {
    background-image: url('/images/Choir\ singing\ 2.jpg');
}
body.aboutClass {
    background-image: url('/images/Everyone\ 2.jpg');
}
body.faqClass {
    background-image: url('/images/Everyone\ 3.jpg');
}
/*End of other backgrounds*/

/*Beginning of gallery*/
body.galleryClass {
    background-image: none;
    background-color: black;
}
#imageBackgroundDiv {
    background-repeat: no-repeat; 
    background-attachment: fixed;
    background-position: center center;
    background-size: contain;
    flex: 1;
}
.galleryClass #myPage {
    flex-direction: column;
    display: flex;
    height: calc(100vh - 55px);
}
/*End of gallery*/

